@@ -1,3 +1,8 @@
+2006-06-13 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* debugger/mcs51/cmd.c (cmdListFunctions): fixed bugs 1181163 and
+	  1208515
+
 2006-06-13 Vangelis Rokas <vrokas AT users.sourceforge.net>
 
 	* src/port.h (struct PORT): added field gp_tags, to hold the tag
